# moistello-contracts

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  PLANS.md  README.md  uxupgrade.md
scripts/: bindings.sh  deploy.sh
